Istio-GW-Traffic-To-Mirror/httpbin-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - pod1-apigw.rel.anfaqa.com
    port:
      name: http
      number: 80
      protocol: HTTP
