Istio-GW-Traffic-To-Mirror/httpbin-vs.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
  name: httpbin
  namespace: istio-system
spec:
  gateways:
  - httpbin-gateway
  hosts:
  - pod1-apigw.rel.anfaqa.com
  http:
  - route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 8000
    mirror:
      host: pod2-apigw.rel.anfaqa.com
      port:
        number: 80
---
